--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
-API_ID=
-API_HASH=
-TOKEN=
+API_ID=7978114
+API_HASH=5f7839feeba133497f24acfd005ef2ec
+TOKEN=6125868465:AAGwAzj-a6dUbl6UqcSU6qPksbnR76FuekU
